--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -167,6 +167,11 @@
       <artifactId>commons-collections</artifactId>
       <version>3.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.3.2</version>
+    </dependency>
   </dependencies>
 
 </project>
