--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -172,6 +172,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.3.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.0</version>
+    </dependency>
   </dependencies>
 
 </project>
